--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,9 @@ pypdf>=3.0.0
 docx2pdf>=0.1.8
 pdf2docx>=0.5.6
 reportlab>=4.0.0
+
+python-docx>=0.8.11
+markdown>=3.4.0
+beautifulsoup4>=4.12.0
+requests>=2.31.0
+pymupdf>=1.23.0
